version/0.20/_sources/api/solver/_autosummary/settings/simulation_reports.rst.txt
:orphan:

.. _simulation_reports:

simulation_reports
==================

.. autoclass:: ansys.fluent.core.solver.settings_241.simulation_reports.simulation_reports
    :show-inheritance:

.. rubric:: Methods

====================================================================================   =============================================================================================================

Method                                                                                                                                                                                       Summary

====================================================================================   =============================================================================================================
:ref:`list_simulation_reports <list_simulation_reports>`                                                                                                                      List all report names.

:ref:`add_histogram_to_report <add_histogram_to_report>`                                                                                           Add a histogram to the current simulation report.

:ref:`generate_simulation_report <generate_simulation_report>`                                  Generate a new simulation report or regenerate an existing simulation report with the provided name.

:ref:`view_simulation_report <view_simulation_report>`                                     View a simulation report that has already been generated. In batch mode this will print the report's URL.

:ref:`export_simulation_report_as_pdf <export_simulation_report_as_pdf>`                                                                        Export the provided simulation report as a PDF file.

:ref:`export_simulation_report_as_html <export_simulation_report_as_html>`                                                                            Export the provided simulation report as HTML.

:ref:`export_simulation_report_as_pptx <export_simulation_report_as_pptx>`                                                                      Export the provided simulation report as a PPT file.

:ref:`write_simulation_report_names_to_file <write_simulation_report_names_to_file>`                                               Write the list of currently generated report names to a txt file.

:ref:`rename_simulation_report <rename_simulation_report>`                                                                                         Rename a report which has already been generated.

:ref:`duplicate_simulation_report <duplicate_simulation_report>`                                                                         Duplicate a report and all of its settings to a new report.

:ref:`reset_report_to_defaults <reset_report_to_defaults>`                                                                  Reset all report settings to default for the provided simulation report.

:ref:`delete_simulation_report <delete_simulation_report>`                                                                                                    Delete the provided simulation report.

:ref:`write_simulation_report_template_file <write_simulation_report_template_file>`                                         Write a JSON template file with this case's Simulation Report settings.

:ref:`read_simulation_report_template_file <read_simulation_report_template_file>`                                               Read a JSON template file with existing Simulation Report settings.

====================================================================================   =============================================================================================================

.. rubric:: Included in:

========================   ===================

Parent                                 Summary

========================   ===================
:ref:`report <report_1>`       'report' child.

========================   ===================

